# gdg-fsc-x-bc-cloud-workshop

./: .bashrc  .dockerignore  .env.example  .gitignore  README.md  config.example.env  demo.py  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
api/: .dockerignore  ADDITIONAL_COMPONENTS.md  Dockerfile  README.md  build.gradle  check-style.xml
docs/: QUICK_START.md  README.md  SUMMARY.md
docs/api/: ADDITIONAL_COMPONENTS.md  DOCUMENTATION_UPDATES.md  PACKAGE_STRUCTURE.md  README.md  RESTAURANT_DETAILS_FIX.md  SECURITY.md  SECURITY_QUICK_REFERENCE.md
docs/cloud/: CLOUD_RUN_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  UPDATE_SUMMARY.md
docs/database/: MIGRATION_NOTES.md  README.md
docs/docker/: DOCKER_GUIDE.md  QUICK_REFERENCE.md  README.md  README_NEW.md  UPDATE_SUMMARY.md
docs/frontend/: DESIGN_IMPROVEMENTS.md  DOCKER_SETUP.md  GOOGLE_MAPS_SETUP.md  GOOGLE_MAPS_TROUBLESHOOTING.md  QUICK_REFERENCE.md  README.md  README_MOVED_FILES.md  VISUAL_CHANGELOG.md
docs/scripts/: README.md
examples/: Dockerfile  README.md  cloud_run_agent.py  requirements-agent.txt
frontend/: .dockerignore  .env.example  Dockerfile  README.md  jsconfig.json  package.json  server.js  vite.config.js
nyc_restaurant_finder/: __init__.py  agent_client.py  cli.py  display.py  models.py
scripts/: build.sh  clean.sh  db-seed.sh  db-setup.sh  deploy-all.sh  deploy-api.sh  deploy-docker.sh  deploy-frontend.sh  dev.sh  docker-clean.sh  docker.sh  format.sh  frontend.sh  install.sh  intsall.sh  lint.sh  populate.sh  test-api.sh
(+66 files in other folders)
