[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-restaurant-safety-finder"
version = "0.1.0"
description = "A Typer + Rich CLI that acts as an Agent2Agent client to query NYC health inspection data via a Cloud Run agent"
authors = [{name = "GDG FSC", email = "gdg@fsc.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]==0.9.0",
    "rich==13.6.0",
    "requests==2.32.4",
    "pydantic==2.4.2",
    "google-cloud-bigquery==3.12.0",
    "google-cloud-storage==2.10.0",
    "folium==0.14.0",
    "geopy==2.4.0",
]

[project.scripts]
nyc-restaurants = "nyc_restaurant_finder.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyc_restaurant_finder*"]